# gopher-rating

./: BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
model/: BUILD.bazel  gopher.go  rating.go
storage/: BUILD.bazel  interface.go
storage/mysql/: BUILD.bazel  mysql.go
view/: BUILD.bazel  view.go
