load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Xjs/gopher-rating
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/Xjs/gopher-rating",
    visibility = ["//visibility:private"],
    deps = [
        "//storage/mysql:go_default_library",
        "//view:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "gopher-rating",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
