load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["view.go"],
    importpath = "github.com/Xjs/gopher-rating/view",
    visibility = ["//visibility:public"],
    deps = [
        "//model:go_default_library",
        "//storage:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)
