load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "github.com/Xjs/gopher-rating/storage/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//model:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
    ],
)
